--- a/package.json
+++ b/package.json
@@ -2,13 +2,41 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "echo \"This template does not include a test runner by default.\" && exit 1"
+    "test": "echo \"This template does not include a test runner by default.\" && exit 1",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
+    "pre-commit": "lint-staged",
+    "up-latest": "npm-check --update",
+    "prepare": "husky install"
   },
-  "devDependencies": {
-    "snowpack": "^3.3.7"
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,css,scss,md,json}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-react": "^7.14.5",
+    "@chakra-ui/react": "^1.6.8",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.3.0"
+  },
+  "devDependencies": {
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.0",
+    "@types/snowpack-env": "^2.3.4",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
+    "npm-check": "^5.9.2",
+    "prettier": "^2.4.1",
+    "snowpack": "^3.3.7",
+    "typescript": "^4.4.3"
   }
 }
