--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
+    "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@snowpack/plugin-webpack": "^3.0.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.0",
