--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "engines": {
+    "node": "14.17.6"
+  },
   "scripts": {
+    "clean": "rm -rf build",
     "start": "snowpack dev",
     "build": "snowpack build",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1",
@@ -20,8 +24,6 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-react": "^7.14.5",
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
