--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "framer-motion": "^4.1.17",
     "googleapis": "^88.2.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/gapi.client.tasks": "^1.0.4",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.0",
     "@types/snowpack-env": "^2.3.4",
     "husky": "^7.0.2",
